manifests/pdfding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdfding
  namespace: pdfding
spec:
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: pdfding
