manifests/pdfding/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdfding-ingress
  namespace: pdfding
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - pdf.smeyer.ca
      secretName: wildcard-smeyer-ca-tls
  rules:
    - host: pdf.smeyer.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pdfding
                port:
                  number: 80
